--- a/head-custom.html
+++ b/head-custom.html
@@ -1,1 +1,1 @@
-    <link rel="icon" type="image/png" href="/favicon.png" />
+    <link rel="icon" type="image/png" href="{{ site.baseurl }}/favicon.png" />
